# nbpull

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  batch_prefixes.example.toml  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: fetcher.agent.md  github.agent.md  reader.agent.md  writer.agent.md
.github/hooks/: logging.json  quality.json  security.json  session.json  subagents.json
.github/hooks/scripts/: post-tool-lint.sh  pre-compact.sh  pre-tool-safety.sh  session-start.sh  session-stop.sh  subagent-start.sh  subagent-stop.sh  tool-logger.sh
.github/instructions/: architecture.instructions.md  cli.instructions.md  client.instructions.md  models.instructions.md  tests.instructions.md  workflow-context.instructions.md
.github/prompts/: BUILD.prompt.md  END.prompt.md  PLAN.prompt.md  RELEASE.prompt.md  START.prompt.md  git-COMMIT.prompt.md  git-ISSUE.prompt.md  git-PR.prompt.md  git-PUSH.prompt.md  new-command.prompt.md  release.prompt.md  update-changelog.prompt.md  workflow-CUSTOMIZE.prompt.md  workflow-MIGRATE.prompt.md
.github/skills/adr-prd-review/: SKILL.md
.github/skills/doc-coauthoring/: SKILL.md
.github/skills/github/: SKILL.md
.github/skills/skill-finder/: SKILL.md
.github/templates/: ADR-template.md  PRD-template.md  context-template.md  plan-template.md  proposal-template.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  commands.md  configuration.md  development.md  releasing.md  workflow.md
src/netbox_data_puller/: __init__.py  cli.py  client.py  config.py  formatters.py  version_check.py
src/netbox_data_puller/models/: __init__.py  aggregate.py  common.py  device.py  ip_address.py  prefix.py  site.py  tenant.py  vlan.py  vrf.py
tests/: __init__.py  test_cli.py  test_client.py  test_formatters.py  test_integration.py  test_models.py  test_version_check.py
